problem 6 clear